--- a/.gitignore
+++ b/.gitignore
@@ -841,6 +841,7 @@ Temporary Items
 *.freezed.dart
 *.g.dart
 *.config.dart
+devtools_options.yaml
 
 ### ---------------------------- References ---------------------------- ###
 
